searchbar element visibility corrected && other elemnts of searchpage added

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -50,6 +50,6 @@ body {
     @apply w-8 h-10 cursor-pointer;
   }
   .icon {
-    @apply w-8 h-6;
+    @apply w-8 h-6 text-black;
   }
 }
